--- a/adventures.html
+++ b/adventures.html
@@ -3,61 +3,54 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Adventures - Myztra</title>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Quicksand&display=swap"
-    rel="stylesheet"
-  />
+  <title>Myztra | Adventures</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="loader">
-    <div class="spinner"></div>
+  <div class="loader-wrapper">
+    <div class="loader"></div>
   </div>
 
+  <div class="stars"></div>
+  <div class="ufos"></div>
+
   <header>
-    <h1>Myztra</h1>
+    <h1 class="site-title">Myztra</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="adventures.html" class="active">Adventures</a>
-      <a href="paranormal.html">Paranormal</a>
-      <a href="conspiracies.html">Conspiracies</a>
-      <a href="mysteries.html">Mysteries</a>
+      <ul>
+        <li><a href="index.html" class="magnet">Home</a></li>
+        <li><a href="adventures.html" class="magnet active">Adventures</a></li>
+        <li><a href="paranormal.html" class="magnet">Paranormal</a></li>
+        <li><a href="conspiracies.html" class="magnet">Conspiracies</a></li>
+        <li><a href="mysteries.html" class="magnet">Mysteries</a></li>
+        <li><a href="blog.html" class="magnet">Blog</a></li>
+      </ul>
     </nav>
+    <button id="audio-toggle" aria-label="Toggle sound" title="Toggle sound">🔊</button>
+    <button id="theme-toggle" aria-label="Toggle theme" title="Toggle theme">🌙</button>
   </header>
 
-  <main class="content">
-    <section class="hero">
-      <h2>Adventures & Quests</h2>
-      <p>Epic journeys, brave explorations, and legendary quests await.</p>
-    </section>
-
-    <section class="posts">
+  <main>
+    <section class="content-section">
+      <h2>Adventures</h2>
+      <p>Explore thrilling quests and daring journeys into the unknown realms.</p>
       <article>
-        <h3>The Lost City of Z</h3>
-        <p>Explore the myths and real stories behind the legendary Amazonian city.</p>
+        <h3>The Lost City Expedition</h3>
+        <p>Discover the secrets of an ancient city hidden deep within the jungle...</p>
       </article>
       <article>
-        <h3>Mountaineering the Uncharted Peaks</h3>
-        <p>Discover tales from the world's most dangerous and mysterious mountains.</p>
-      </article>
-      <article>
-        <h3>Medieval Treasure Hunts</h3>
-        <p>Follow clues and uncover secrets buried beneath history.</p>
+        <h3>Mountain of Whispers</h3>
+        <p>Legend tells of a mountain that speaks to those brave enough to climb it...</p>
       </article>
     </section>
   </main>
 
-  <footer>&copy; 2025 Myztra. All rights reserved.</footer>
+  <audio id="ambience" loop autoplay>
+    <source src="sounds/adventure-ambience.mp3" type="audio/mpeg" />
+  </audio>
 
-  <script>
-    window.addEventListener("load", () => {
-      document.body.classList.add("loaded");
-      setTimeout(() => {
-        const loader = document.getElementById("loader");
-        if (loader) loader.style.display = "none";
-      }, 600);
-    });
-  </script>
+  <div class="custom-cursor"></div>
+
+  <script src="script.js"></script>
 </body>
 </html>
