--- a/paranormal.html
+++ b/paranormal.html
@@ -3,61 +3,54 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Paranormal - Myztra</title>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Quicksand&display=swap"
-    rel="stylesheet"
-  />
+  <title>Myztra | Paranormal</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="loader">
-    <div class="spinner"></div>
+  <div class="loader-wrapper">
+    <div class="loader"></div>
   </div>
 
+  <div class="stars"></div>
+  <div class="ufos"></div>
+
   <header>
-    <h1>Myztra</h1>
+    <h1 class="site-title">Myztra</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="adventures.html">Adventures</a>
-      <a href="paranormal.html" class="active">Paranormal</a>
-      <a href="conspiracies.html">Conspiracies</a>
-      <a href="mysteries.html">Mysteries</a>
+      <ul>
+        <li><a href="index.html" class="magnet">Home</a></li>
+        <li><a href="adventures.html" class="magnet">Adventures</a></li>
+        <li><a href="paranormal.html" class="magnet active">Paranormal</a></li>
+        <li><a href="conspiracies.html" class="magnet">Conspiracies</a></li>
+        <li><a href="mysteries.html" class="magnet">Mysteries</a></li>
+        <li><a href="blog.html" class="magnet">Blog</a></li>
+      </ul>
     </nav>
+    <button id="audio-toggle" aria-label="Toggle sound" title="Toggle sound">🔊</button>
+    <button id="theme-toggle" aria-label="Toggle theme" title="Toggle theme">🌙</button>
   </header>
 
-  <main class="content">
-    <section class="hero">
-      <h2>Paranormal Phenomena</h2>
-      <p>Ghosts, cryptids, hauntings, and unexplained supernatural events.</p>
-    </section>
-
-    <section class="posts">
+  <main>
+    <section class="content-section">
+      <h2>Paranormal</h2>
+      <p>Uncover stories of ghosts, hauntings, and supernatural encounters.</p>
       <article>
-        <h3>The Enfield Poltergeist Case</h3>
-        <p>A deep dive into one of the most famous haunting investigations ever recorded.</p>
+        <h3>Haunted Manor Secrets</h3>
+        <p>The old manor has long been the center of strange phenomena...</p>
       </article>
       <article>
-        <h3>Cryptids of the Deep Forest</h3>
-        <p>Exploring mysterious creatures reported in remote woods around the world.</p>
-      </article>
-      <article>
-        <h3>Technology & The Paranormal</h3>
-        <p>How modern devices help capture and analyze supernatural phenomena.</p>
+        <h3>Phantom Lights of Ravenhill</h3>
+        <p>Mysterious lights appear at night, baffling scientists and locals alike...</p>
       </article>
     </section>
   </main>
 
-  <footer>&copy; 2025 Myztra. All rights reserved.</footer>
+  <audio id="ambience" loop autoplay>
+    <source src="sounds/paranormal-ambience.mp3" type="audio/mpeg" />
+  </audio>
 
-  <script>
-    window.addEventListener("load", () => {
-      document.body.classList.add("loaded");
-      setTimeout(() => {
-        const loader = document.getElementById("loader");
-        if (loader) loader.style.display = "none";
-      }, 600);
-    });
-  </script>
+  <div class="custom-cursor"></div>
+
+  <script src="script.js"></script>
 </body>
 </html>
