--- a/paranormal.html
+++ b/paranormal.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Myztra | Paranormal</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -20,36 +20,24 @@
       <ul>
         <li><a href="index.html" class="magnet">Home</a></li>
         <li><a href="adventures.html" class="magnet">Adventures</a></li>
-        <li><a href="paranormal.html" class="magnet active">Paranormal</a></li>
+        <li><a href="paranormal.html" class="magnet">Paranormal</a></li>
         <li><a href="conspiracies.html" class="magnet">Conspiracies</a></li>
         <li><a href="mysteries.html" class="magnet">Mysteries</a></li>
         <li><a href="blog.html" class="magnet">Blog</a></li>
       </ul>
     </nav>
-    <button id="audio-toggle" aria-label="Toggle sound" title="Toggle sound">🔊</button>
-    <button id="theme-toggle" aria-label="Toggle theme" title="Toggle theme">🌙</button>
   </header>
 
   <main>
-    <section class="content-section">
-      <h2>Paranormal</h2>
-      <p>Uncover stories of ghosts, hauntings, and supernatural encounters.</p>
-      <article>
-        <h3>Haunted Manor Secrets</h3>
-        <p>The old manor has long been the center of strange phenomena...</p>
-      </article>
-      <article>
-        <h3>Phantom Lights of Ravenhill</h3>
-        <p>Mysterious lights appear at night, baffling scientists and locals alike...</p>
-      </article>
+    <section class="intro">
+      <h2>Beyond the Veil</h2>
+      <p>Ghosts, hauntings, cryptids and other eerie phenomena—uncover the world of the unexplained that lies beneath the surface.</p>
     </section>
   </main>
 
-  <audio id="ambience" loop autoplay>
-    <source src="sounds/paranormal-ambience.mp3" type="audio/mpeg" />
-  </audio>
-
   <div class="custom-cursor"></div>
+  <button class="sound-toggle">🔊</button>
+  <button class="theme-toggle">🌓</button>
 
   <script src="script.js"></script>
 </body>
