--- a/conspiracies.html
+++ b/conspiracies.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Myztra | Conspiracies</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -21,35 +21,23 @@
         <li><a href="index.html" class="magnet">Home</a></li>
         <li><a href="adventures.html" class="magnet">Adventures</a></li>
         <li><a href="paranormal.html" class="magnet">Paranormal</a></li>
-        <li><a href="conspiracies.html" class="magnet active">Conspiracies</a></li>
+        <li><a href="conspiracies.html" class="magnet">Conspiracies</a></li>
         <li><a href="mysteries.html" class="magnet">Mysteries</a></li>
         <li><a href="blog.html" class="magnet">Blog</a></li>
       </ul>
     </nav>
-    <button id="audio-toggle" aria-label="Toggle sound" title="Toggle sound">🔊</button>
-    <button id="theme-toggle" aria-label="Toggle theme" title="Toggle theme">🌙</button>
   </header>
 
   <main>
-    <section class="content-section">
-      <h2>Conspiracies</h2>
-      <p>Dive into shadowy plots and cover-ups from history and today.</p>
-      <article>
-        <h3>The Lost Moon Landing Tapes</h3>
-        <p>Exploring the theory that crucial footage was deliberately destroyed...</p>
-      </article>
-      <article>
-        <h3>Secret Societies and Hidden Agendas</h3>
-        <p>Unveiling the myths and facts behind some of the world's most secretive groups...</p>
-      </article>
+    <section class="intro">
+      <h2>The Hidden Truths</h2>
+      <p>From ancient cover-ups to modern secrets, journey through the web of theories that challenge what we think we know.</p>
     </section>
   </main>
 
-  <audio id="ambience" loop autoplay>
-    <source src="sounds/conspiracy-tone.mp3" type="audio/mpeg" />
-  </audio>
-
   <div class="custom-cursor"></div>
+  <button class="sound-toggle">🔊</button>
+  <button class="theme-toggle">🌓</button>
 
   <script src="script.js"></script>
 </body>
