--- a/mysteries.html
+++ b/mysteries.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Myztra | Mysteries</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -22,34 +22,22 @@
         <li><a href="adventures.html" class="magnet">Adventures</a></li>
         <li><a href="paranormal.html" class="magnet">Paranormal</a></li>
         <li><a href="conspiracies.html" class="magnet">Conspiracies</a></li>
-        <li><a href="mysteries.html" class="magnet active">Mysteries</a></li>
+        <li><a href="mysteries.html" class="magnet">Mysteries</a></li>
         <li><a href="blog.html" class="magnet">Blog</a></li>
       </ul>
     </nav>
-    <button id="audio-toggle" aria-label="Toggle sound" title="Toggle sound">🔊</button>
-    <button id="theme-toggle" aria-label="Toggle theme" title="Toggle theme">🌙</button>
   </header>
 
   <main>
-    <section class="content-section">
-      <h2>Mysteries</h2>
-      <p>From lost civilizations to unsolved enigmas, step into the unknown.</p>
-      <article>
-        <h3>The Bloop Sound</h3>
-        <p>A deep oceanic sound captured in 1997 with no clear origin...</p>
-      </article>
-      <article>
-        <h3>The Voynich Manuscript</h3>
-        <p>An ancient book written in an undecipherable script baffling scholars...</p>
-      </article>
+    <section class="intro">
+      <h2>Unsolved & Unknown</h2>
+      <p>Enter the realm of baffling enigmas, from lost artifacts to unexplained phenomena. These stories resist easy answers.</p>
     </section>
   </main>
 
-  <audio id="ambience" loop autoplay>
-    <source src="sounds/mystery-bg.mp3" type="audio/mpeg" />
-  </audio>
-
   <div class="custom-cursor"></div>
+  <button class="sound-toggle">🔊</button>
+  <button class="theme-toggle">🌓</button>
 
   <script src="script.js"></script>
 </body>
