--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Myztra | Blog</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -23,36 +23,21 @@
         <li><a href="paranormal.html" class="magnet">Paranormal</a></li>
         <li><a href="conspiracies.html" class="magnet">Conspiracies</a></li>
         <li><a href="mysteries.html" class="magnet">Mysteries</a></li>
-        <li><a href="blog.html" class="magnet active">Blog</a></li>
+        <li><a href="blog.html" class="magnet">Blog</a></li>
       </ul>
     </nav>
-    <button id="audio-toggle" aria-label="Toggle sound" title="Toggle sound">🔊</button>
-    <button id="theme-toggle" aria-label="Toggle theme" title="Toggle theme">🌙</button>
   </header>
 
   <main>
-    <section class="content-section">
-      <h2>Latest Blog Posts</h2>
-      <article>
-        <h3><a href="post.html?id=1">Understanding the Origins of The Bloop</a></h3>
-        <p>Deep dive into the mysterious sound recorded in the Pacific Ocean...</p>
-      </article>
-      <article>
-        <h3><a href="post.html?id=2">Top 5 Unsolved Paranormal Mysteries</a></h3>
-        <p>A countdown of the most baffling ghost stories and hauntings...</p>
-      </article>
-      <article>
-        <h3><a href="post.html?id=3">Conspiracy Theories That Turned Out to Be True</a></h3>
-        <p>Exploring conspiracies that history later confirmed...</p>
-      </article>
+    <section class="intro">
+      <h2>Latest Thoughts</h2>
+      <p>Dive into new theories, findings, and community discussions. The blog is where Myztra comes alive with ideas and insights.</p>
     </section>
   </main>
 
-  <audio id="ambience" loop autoplay>
-    <source src="sounds/blog-bg.mp3" type="audio/mpeg" />
-  </audio>
-
   <div class="custom-cursor"></div>
+  <button class="sound-toggle">🔊</button>
+  <button class="theme-toggle">🌓</button>
 
   <script src="script.js"></script>
 </body>
