--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       color: #fff;
       overflow-x: hidden;
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Bebas Neue', sans-serif;
     }
 
     header {
@@ -75,7 +75,7 @@
     .ufo {
       position: absolute;
       width: 16px;
-      height: 8px;
+      height: 16px;
       background: #0ff;
       border-radius: 50% 50% 0 0;
       box-shadow: 0 0 8px #0ff;
